--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -19,7 +19,7 @@
             <input type="hidden" sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:name="isRole"
                    th:value="false"/>
             <form id="searchFrm">
-                <input class="search col-5 mr-2" id="search" name="search" type="text" maxlength="100"
+                <input class="z-input search col-5 mr-2" id="search" name="search" type="text" maxlength="100"
                        th:placeholder="#{cmdb.attribute.label.searchPlaceholder}"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
