--- a/src/main/resources/public/template/download/downloadEdit.html
+++ b/src/main/resources/public/template/download/downloadEdit.html
@@ -32,7 +32,7 @@
                     <span th:text="#{common.label.title}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="downloadTitle" maxlength="100" th:value="${download?.downloadTitle}"></td>
+                <input type="text" id="downloadTitle" class="z-input" maxlength="100" th:value="${download?.downloadTitle}"></td>
             </div>
             <div class="flex-column edit-row file-uploader-edit">
                 <label class="file-uploader-title" th:text="#{common.label.attachFile}"/>
