--- a/src/main/resources/public/template/download/downloadSearch.html
+++ b/src/main/resources/public/template/download/downloadSearch.html
@@ -21,10 +21,10 @@
                     <option value="" th:text="#{download.category.all}"></option>
                     <option th:each="category: ${categoryList}" th:value="${category.code}" th:text="#{${category.code}}"></option>
                 </select>
-                <input type="text" id="search" name="search" class="search col-3" maxlength="100" th:placeholder="#{download.label.searchPlaceholder}"/>
-                <input type="text" id="fromDt" name="fromDt" class="search-date col-3"/>
+                <input type="text" class="z-input search col-3" id="search" name="search" maxlength="100" th:placeholder="#{download.label.searchPlaceholder}"/>
+                <input type="text" class="z-input search-date col-3" id="fromDt" name="fromDt" />
                 <span>~</span>
-                <input type="text" class="search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
+                <input type="text" class="z-input search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
                 <input type="hidden" class="search-date" id="toDt" name="toDt"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
