--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -34,7 +34,7 @@
                         <span th:text="#{common.label.title}"></span>
                         <span class="required"></span>
                     </label>
-                    <input id="faqTitle" name="faqTitle" th:value="${faq?.faqTitle}"
+                    <input type="text" class="z-input" id="faqTitle" name="faqTitle" th:value="${faq?.faqTitle}"
                            maxlength="100" required="required"/>
                 </div>
                 <div class="flex-column edit-row">
