--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1234,7 +1234,6 @@ label {
   margin: 0;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
-  flex-basis: calc((100% * var(--data-column, 12)) / 12);
 }
 .input-button input[type=text]:focus, .input-button input[type=text]:hover {
   z-index: 25;
@@ -1359,6 +1358,61 @@ label {
   -webkit-mask-position: center;
   mask-position: center;
   background: #8B9094;
+}
+
+.z-textarea {
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #212121;
+  background-color: #FFFFFF;
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem;
+  resize: vertical;
+}
+.z-textarea::placeholder {
+  color: #ABB0B5;
+}
+.z-textarea:not(:disabled):focus, .z-textarea:not(:read-only):focus {
+  outline: 0;
+  border-color: #2578CE;
+  -webkit-box-shadow: 0 0 0.125rem 0 #2578CE;
+  -moz-box-shadow: 0 0 0.125rem 0 #2578CE;
+  box-shadow: 0 0 0.125rem 0 #2578CE;
+}
+.z-textarea:not(:disabled):hover, .z-textarea:not(:read-only):hover {
+  outline: 0;
+  border-color: #64BBF6;
+}
+.z-textarea:not(:disabled):active, .z-textarea:not(:read-only):active {
+  outline: 0;
+  border-color: #339AF0;
+}
+.z-textarea:disabled {
+  color: #ABB0B5;
+  background-color: #EEEEEE;
+  pointer-events: none;
+  cursor: default;
+}
+.z-textarea:read-only {
+  border-color: #ABB0B5;
+  border-style: none none none solid;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  background-color: #FFFFFF;
+  pointer-events: none;
+  cursor: default;
+}
+.z-textarea.error {
+  border: 0.0625rem solid #F52525;
+}
+.z-textarea.success {
+  border: 0.0625rem solid #76BD26;
 }
 
 h6 {
@@ -2287,6 +2341,8 @@ button .icon-plus {
   padding: 0;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
+  -webkit-border-radius: 0.0625rem;
+  -moz-border-radius: 0.0625rem;
   overflow: hidden;
   cursor: pointer;
 }
@@ -2548,6 +2604,7 @@ button .icon-plus {
   font-size: 1rem;
   font-weight: 400;
   color: #929AA6;
+  margin-top: 0.625rem;
 }
 
 .token-content,
@@ -2722,7 +2779,7 @@ button .icon-plus {
 .numbering-pattern-content-edit .edit-form .edit-row .input-button-remove .input-button-remove-btn:hover,
 .numbering-rule-content-edit .edit-form .edit-row .input-button-remove .input-button-remove-btn:hover,
 .cmdb-type-content-edit .edit-form .edit-row .input-button-remove .input-button-remove-btn:hover {
-  color: #ffffff;
+  color: #FFFFFF;
   background: #CCCED1;
 }
 .auth-content-edit .edit-form .edit-row .input-button-remove .input-button-remove-btn:hover + div > span,
@@ -2808,6 +2865,7 @@ button .icon-plus {
   padding: 3.125rem 3.75rem;
   border-top: 0.0625rem solid #EBEBEB;
   background-color: #FFFFFF;
+  border-top: 0.0625rem solid #EBEBEB;
 }
 
 .custom-code-content-edit,
@@ -6915,3 +6973,5 @@ body.modal-active {
 .tags-look .tagify__dropdown__item--active {
   color: #0088E6;
 }
+
+/*# sourceMappingURL=itsm.css.map */
