--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -335,7 +335,7 @@
           @include borderRadius(3.125rem); // 50px
           order: 5;
           cursor: pointer;
-          font-family: $font-family;
+          font-family: $font-family-m;
           font-size: 1.25rem; // 20px
           font-weight: $font-weight-bold;
           color: map-get($grays, "pressed");
