--- a/src/main/resources/public/template/board/boardArticlesView.html
+++ b/src/main/resources/public/template/board/boardArticlesView.html
@@ -76,7 +76,7 @@
                 <div class="flex-row align-items-center reply-input-row">
                     <img class="profile-photo mr-2" alt="profile pic" th:src="${#authentication.details.avatarPath}"
                          width="32" height="32"/>
-                    <input type="text" class="reply-input" id="boardComments" name="boardComments" maxlength="500"
+                    <input type="text" class="z-input reply-input" id="boardComments" name="boardComments" maxlength="500"
                            th:placeholder="#{comment.msg.enterComments}"/>
                     <button class="default-line reply-button" onclick="saveBoardComment('post')"
                             th:text="#{common.btn.save}"></button>
@@ -157,7 +157,7 @@
                 });
             } else {
                 let context = document.getElementById(boardCommentId).innerText;
-                document.getElementById(boardCommentId).innerHTML = "<input type='text' maxlength='500' id='editComments' name='editComments' value='" + context + "'/>" +
+                document.getElementById(boardCommentId).innerHTML = "<input type='text' maxlength='500' class='z-input' id='editComments' name='editComments' value='" + context + "'/>" +
                     "<button class='default-line' onclick=\"saveBoardEditComment('put','" + boardCommentId + "')\">" + i18n.msg('common.btn.save') + "</button>";
             }
         }
