--- a/src/main/resources/public/template/board/boardSearch.html
+++ b/src/main/resources/public/template/board/boardSearch.html
@@ -19,7 +19,7 @@
             <input type="hidden" sec:authorize="!hasAuthority('board.admin.update')" th:name="isRole"
                    th:value="false"/>
             <form id="searchFrm">
-                <input type="text" id="search" name="search" class="search col-5 mr-2" maxlength="100"
+                <input type="text" id="search" name="search" class="z-input search col-5 mr-2" maxlength="100"
                        th:placeholder="#{board.label.searchPlaceholder}"/>
                 <span id="spanTotalCount" class="search-count"></span>
             </form>
