--- a/src/main/resources/public/template/board/boardView.html
+++ b/src/main/resources/public/template/board/boardView.html
@@ -20,7 +20,7 @@
                     <span th:text="#{board.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="boardAdminTitle" maxlength="70" th:value="${boardAdmin?.boardAdminTitle}"
+                <input type="text" class="z-input" id="boardAdminTitle" maxlength="70" th:value="${boardAdmin?.boardAdminTitle}"
                        required="required" disabled/>
             </div>
             <div class="flex-column edit-row">
@@ -33,7 +33,7 @@
             </div>
             <div class="flex-column edit-row">
                 <label th:text="#{board.label.order}" for="boardAdminSort"></label>
-                <input class="col-6" id="boardAdminSort" name="boardAdminSort" type="text"
+                <input class="z-input col-6" id="boardAdminSort" name="boardAdminSort" type="text"
                        th:value="${boardAdmin?.boardAdminSort}" maxlength="2"
                        onKeyup="this.value=this.value.replace(/[^0-9]/g,'');" disabled/>
             </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="flex-column edit-row">
                 <label th:text="#{board.label.attachFileSize}" for="attachFileSize"></label>
-                <input class="col-6 mb" id="attachFileSize" name="attachFileSize" type="text"
+                <input class="z-input col-6 mb" id="attachFileSize" name="attachFileSize" type="text"
                        th:value="${boardAdmin?.attachFileSize}" maxlength="4" disabled/>
             </div>
             <div class="flex-row justify-content-end edit-row">
