--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -21,11 +21,11 @@
 </div>
 <div class="flex-column edit-row">
     <label class="field-label required" th:text="#{chart.label.name}"/>
-    <input type="text" id="chartName" name="chartName" th:value="${chart?.chartName}" maxlength="100"/>
+    <input type="text" id="chartName" name="chartName" class="z-input" th:value="${chart?.chartName}" maxlength="100"/>
 </div>
 <div class="flex-column edit-row">
     <label class="field-label" th:text="#{chart.label.description}"/>
-    <input type="text" id="chartDesc" name="chartDesc" th:value="${chart?.chartDesc}" maxlength="100"/>
+    <input type="text" id="chartDesc" name="chartDesc" class="z-input" th:value="${chart?.chartDesc}" maxlength="100"/>
 </div>
 <div class="flex-column edit-row mt-2">
     <h4 class="sub-title under-bar bold" th:text="#{chart.label.queryInfo}"/>
@@ -55,7 +55,7 @@
             <div>
                 <input type="text" id="durationDigit" name="durationDigit" th:value="${chart?.durationDigit}"
                        onkeydown="return onlyNumber(event)" onkeyup="aliceJs.removeChar(event)" maxlength="100"
-                       class="align-right col-2"/>
+                       class="z-input align-right col-2"/>
                 <select id="durationUnitSelectBox" name="durationUnitSelectBox" class="col-2">
                     <option th:each="unit:${unitList}" th:value="${unit.codeValue}"
                             th:text="${unit.codeName}"
@@ -77,7 +77,7 @@
         <div class="flex-column col-6">
             <label id="groupLabel" name="groupLabel" class="field-label required"
                    th:text="#{chart.label.group}"></label>
-            <input type="text" id="targetGroup" name="targetGroup" th:value="${chart?.group}" maxlength="100"/>
+            <input type="text" id="targetGroup" name="targetGroup" class="z-input" th:value="${chart?.group}" maxlength="100"/>
         </div>
     </div>
 </div>
