--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -21,7 +21,7 @@
                     <span th:text="#{cmdb.attribute.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="attributeName" required="required" maxlength="100"
+                <input type="text" id="attributeName" class="z-input" required="required" maxlength="100"
                        th:value="${attribute?.attributeName}" disabled/>
             </div>
             <div class="flex-column edit-row">
@@ -35,7 +35,7 @@
                 <label for="attributeText">
                     <span th:text="#{cmdb.attribute.label.label}"></span>
                 </label>
-                <input type="text" id="attributeText" maxlength="100"
+                <input type="text" id="attributeText" class="z-input" maxlength="100"
                        th:value="${attribute?.attributeText}" disabled/>
             </div>
             <div class="flex-column edit-row">
