--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -19,9 +19,9 @@
             <input type="hidden" sec:authorize="!hasAuthority('cmdb.ci.create') && !hasAuthority('cmdb.ci.update')"
                    th:name="isRole" th:value="false"/>
             <form id="searchFrm">
-                <input class="search col-5" id="search" name="search" type="text" maxlength="100"
+                <input type="text" class="z-input search col-5" id="search" name="search" maxlength="100"
                        th:placeholder="#{cmdb.ci.label.searchPlaceholder}"/>
-                <input class="search col-3 mr-2" id="tagSearch" name="tagSearch" type="text" maxlength="100"
+                <input type="text" class="z-input search col-3 mr-2" id="tagSearch" name="tagSearch" maxlength="100"
                        th:placeholder="#{cmdb.ci.label.tagPlaceholder}"/>
                 <input type="hidden" id="flag" name="flag" value="itsm"/>
                 <span id="spanTotalCount" class="search-count"></span>
