--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -21,7 +21,7 @@
                     <span th:text="#{customCode.label.name}"></span>
                     <span class="required"></span>
                 </label>
-                <input type="text" id="customCodeName" required="required" maxlength="110"
+                <input type="text" id="customCodeName" class="z-input" required="required" maxlength="110"
                        th:value="${customCode?.customCodeName}">
             </div>
             <div class="flex-column edit-row">
@@ -95,8 +95,8 @@
                         <span th:text="#{customCode.label.pCode}"></span>
                         <span class="required"></span>
                     </label>
-                    <input type="text" id="pCode" maxlength="100" th:disabled="${customCode?.pCode != null}"
-                           th:value="${customCode?.pCode}">
+                    <input type="text" id="pCode" class="z-input" maxlength="100" th:value="${customCode?.pCode}"
+                           th:disabled="${customCode?.pCode != null}">
                 </div>
             </div>
             <div class="flex-row justify-content-end edit-row">
@@ -220,7 +220,7 @@
             equalSpan.classList.add('equal', 'ml-1', 'mr-1');
 
             const valueInput = document.createElement('input');
-            valueInput.classList.add('condition');
+            valueInput.classList.add('z-input', 'condition');
             valueInput.type = 'text';
             valueInput.name = 'conditionValue';
             valueInput.maxLength = 100;
