--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -17,7 +17,7 @@
         </div>
         <div class="flex-column view-row">
             <div class="flex-row justify-content-start">
-                <input class="search col-5" type="text" id="search" th:placeholder="#{customCode.msg.enterSearchTerm}">
+                <input class="z-input search col-5" type="text" id="search" th:placeholder="#{customCode.msg.enterSearchTerm}">
             </div>
         </div>
         <div class="flex-column view-row">
