#10947 CMDB CI Tag 관련 이슈 1. CMDB의 getCIs 함수 호출시 에러 발생 현상 분석 2. CI에 tags 가 Gson의 JsonArray로 추가되어 ResponseEntity 반환시 에러 발생 3. CI 목록에서 상세화면 클릭시 에러 발생 현상 수정 4. JsonArray 부분을 변경하여 정상 처리되도록 수정 (구조 일치) 5. tags, ciTags 명칭이 섞여 있는 부분 수정 6. 검색어 입력시 태그가 이상하게 보이는 현상 수정

--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -32,7 +32,7 @@
                 <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
                 <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
                 <td style="width: 25%;" class="align-left">
-                    <input type="text" name="ciListTags" class="align-left text-ellipsis" th:value="${ci.tags}"
+                    <input type="text" name="ciListTags" class="align-left text-ellipsis" th:value="${ci.ciTags}"
                            readonly></input>
                 </td>
             </tr>
