--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -44,12 +44,14 @@
         window.onload = function () {
             document.getElementById('search').focus();
             document.getElementById('search').onkeyup = function() {
+                loopOffSet = 0;
                 searchCis(false);
             };
             // 태그 조회가 아직 미완성이기 때문에 임시적으로 엔터로 변경한다.
             document.getElementById('tagSearch').onkeyup = function(e) {
                 if (e.key === 'Enter') {
                     e.preventDefault();
+                    loopOffSet = 0;
                     searchCis(false);
                 }
             };
